--- a/2022.08.02_html/ch02/test.html
+++ b/2022.08.02_html/ch02/test.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>나만의 프로필</title>
+    <style>
+        table,th,td {
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+        th,td{
+            padding:15px
+        }
+    </style>
 </head>
 
 <body>
@@ -32,7 +41,31 @@
         <ul>
             <li>Visual Studio(1years)</li>
             <li><mark>Visual Studio Code(1years)</mark></li>
+            <li>eclipse</li>
         </ul>
     </ul>
+
+    <h2>Academic</h2>
+    <table border="1">
+        <caption>학력 사항</caption>
+        <tr>
+            <th>출신학교</th>
+            <th>전공</th>
+            <th>기간</th>
+            <th>졸업구분</th>
+        </tr>
+        <tr>
+            <td>구미 고등학교</td>
+            <td>(해당사항 없음)</td>
+            <td>2013.03~2015.02</td>
+            <td>졸업</td>
+        </tr>
+        <tr>
+            <td>대구대학교</td>
+            <td>AI 소프트웨어 공학</td>
+            <td>2016.03~2023.02</td>
+            <td>재학</td>
+        </tr>
+    </table>
 </body>
 </html>
