--- a/2022.08.03_html/Quiz-2.html
+++ b/2022.08.03_html/Quiz-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>퀴즈 2</title>
+    <title>신입 사원 모집 공고</title>
 </head>
 <body>
     <h1>이지스퍼블리싱 신입 사원 모집 공고</h1>
