--- a/2022.08.03_html/ch04/withLabel.html
+++ b/2022.08.03_html/ch04/withLabel.html
@@ -18,14 +18,14 @@
     <form action=""></form>
     <h3>수강분야(다수 선택 가능)</h3>
     <ul>
-        <li><input type="checkbox">문법</li>
+        <li><input type="checkbox" checked>문법</li>
         <li><input type="checkbox">작문</li>
         <li><input type="checkbox">독해</li>
     </ul>
     <h3>수강과목(중복 선택 불가능)</h3>
     <!-- label을 사용하면 버튼 외에 글씨도 선택가능해짐 -->
     <ul> 
-        <li><label><input type="radio" name="subject">영어회화</label></li>
+        <li><label><input type="radio" name="subject" checked>영어회화</label></li>
         <li><label><input type="radio" name="subject">중국어회화</label></li>
         <li><label><input type="radio" name="subject">일어회화</label></li>
     </ul>
