--- a/2022.08.03_html/ch04/attribute.html
+++ b/2022.08.03_html/ch04/attribute.html
@@ -68,8 +68,14 @@
                     <input type="number" id="wsheet" value="1" min="1" max="3"></li>
                 <li><label for="group">단체주문</label>
                     <input type="number" id="group" value="10" min="10" max="100" step="10"></li>
+                <li>
+                    <label for="comment">참고사항</label>
+                    <textarea name="" id="comment" cols="30" rows="3"></textarea>
+                </li>
             </ul>
         </fieldset>
+        <input type="submit" value="신청하기">
+        <input type="reset" value="다시 입력">
     </form>
     
 </body>
