--- a/2022.08 study/html/2022.08.10_html/ch12/Quiz2.html
+++ b/2022.08 study/html/2022.08.10_html/ch12/Quiz2.html
@@ -22,7 +22,7 @@
             text-decoration: none;
             color: black;
         }
-        a:visited{
+        a:link, a:visited{
             color: black;
         }
         a:active{
